Navbar fixed everywhere, on smaller devices it will appear scrollable when the text is too long. I added section elements for the main page's sections

--- a/style.css
+++ b/style.css
@@ -2,45 +2,52 @@
 /* General css */
 ul {
   margin: 2.6rem;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: space-around;
 }
 
 ul li {
   list-style-type: none;
-  display: flex;
-  justify-content: center;
-  width: 100%;
   padding: 1rem 0;
 
 }
 
+body {
+  margin: 0;
+  background-color: beige;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+* {
+  margin: 0;
 
-
+}
 
 /* Top Nav Bar*/
 
 /* Use a flexbox to dynamically reposition items*/
+.top-navbar nav {
+  position: sticky;
+  overflow-y: visible;
+}
 .top-navbar {
+  overflow-x: scroll;
   background-color: navy;
   position: sticky;
   width: 100%;
-  transition: top 0.5s;
+
+
 }
 
 .top-navbar ul { 
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   list-style-type: none;
   margin: 0;
   padding: 0;
+  align-items: stretch;
 }
-
 .top-navbar ul li {
-  width: 200px;
   padding: 0px;
 }
 
@@ -49,24 +56,27 @@ ul li {
   float: left;
   display: block;
   color: white;
+  font-weight: bold;
+  background-color: navy;
   text-align: center;
   padding: 20px;
   text-decoration: none;
-  transition: 0.5s
+  height: 100%;
+
   /* Needed to fix the active element appearing smaller than usual*/
 }
 
 .top-navbar a:hover {
-  font-weight: bold;
-  background-color: rgb(9, 6, 54);
+  /* font-weight: bold; */
+  background-color: rgb(135, 135, 248);
 }
 
 .top-navbar .active:hover {
-  background-color: #04AA6D;
+  background-color: rgb(66, 26, 176);
 }
 
 .top-navbar .active {
-  background-color: #04AA6D;
+  background-color: rgb(66, 26, 176);
 }
 
 
@@ -74,7 +84,14 @@ ul li {
 
 
 
-/*Home page title*/
+/* hero section */
+
+.hero-section {
+  background: linear-gradient(200.00deg,navy 70%, rgb(118, 26, 176) 100%);
+  color:white;
+  padding-top: 84px;
+  padding-bottom: 84px;
+}
 
 .title {
   justify-content: space-between;
@@ -89,6 +106,7 @@ ul li {
   flex-direction: column;
   margin-top: 0px;
   margin-bottom: 0px;
+
 
 }
 
@@ -123,6 +141,8 @@ ul li {
   line-height: 55px;
 }
 
+
+
 .titlebox {
   /* Flex box is used in order to ensure dynamic resizing. */
   display: flex;
@@ -130,36 +150,32 @@ ul li {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
-  margin-bottom: 100px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin: 0 0 0 0;
 }
 
-  .titlebox {
-    /* Flex box is used in order to ensure dynamic resizing. */
-    display: flex;
-    /* The title is centered horizontally.  and each of its component are on top of each other*/
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
+#push {
+  text-decoration: none;
+  color: white;
+}
 
-  }
+#push:hover {
+  color: rgb(63, 122, 210);
 
-  #push {
-    text-decoration: none;
-    color: black;
-  }
 
-  #push:hover {
-    color: orangered;
-
-  }
+}
 
 
 
 
-  /* Review section */
+/* Review section */
+
+.review-section {
+  background-color: black;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 
 #review-stars {
   margin: auto;
@@ -223,11 +239,7 @@ ul li {
   to {opacity: 1}
 }
 
-body {
-  margin: 0;
-  background-color: navy;
-  font-family: 'Montserrat', sans-serif;
-}
+
 
 /* FOOTER*/
 .contact-form input,
@@ -309,38 +321,8 @@ body {
   line-height: 55px;
 }
 
-.titlebox {
-  /* Flex box is used in order to ensure dynamic resizing. */
-  display: flex;
-  /* The title is centered horizontally.  and each of its component are on top of each other*/
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  margin-top: 100px;
-  margin-bottom: 100px;
-}
 
-.titlebox {
-  /* Flex box is used in order to ensure dynamic resizing. */
-  display: flex;
-  /* The title is centered horizontally.  and each of its component are on top of each other*/
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
 
-}
-
-#push {
-  text-decoration: none;
-  color: black;
-}
-
-#push:hover {
-  color: orangered;
-
-}
 
 body.pricing {
   background: #f7f7ff;
